# CValAIAgent

./: .env-example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  plan.md
.github/workflows/: ci.yml
Docs/: APIContracts.md  ActionPlan.md  ArchitectureDiagram.md  ComponentImplementationGuide.md  ComponentSpecifications.md  DevelopmentRoadmap.md  DevelopmentWorkflow.md  ProjectPlan.md  ProjectSummary.md  TechnicalArchitecture.md  TestingStrategy.md  UsageGuide.md
backend/code_generator/: Dockerfile  README.md  pyproject.toml  run_service.sh
backend/code_generator/src/code_generator/: config.py  main.py  models.py  service.py
backend/code_generator/tests/: test_service.py
backend/demographic_classifier/: Dockerfile  README.md  pyproject.toml  run_service.sh
backend/demographic_classifier/src/demographic_classifier/: __init__.py  config.py  main.py  models.py  service.py
backend/demographic_classifier/tests/: test_service.py
backend/design_mapper/: Dockerfile  README.md  pyproject.toml  run_service.sh
backend/design_mapper/src/design_mapper/: __init__.py  api.py  config.py
backend/design_mapper/src/design_mapper/models/: __init__.py  schemas.py
backend/design_mapper/src/design_mapper/service/: __init__.py  mapper.py
backend/design_mapper/src/design_mapper/utils/: __init__.py  loader.py
backend/design_mapper/tests/: test_mapper.py
backend/intent_extractor/: Dockerfile  README.md  pyproject.toml
backend/intent_extractor/src/intent_extractor/: config.py  main.py  models.py  regex_rules.py  service.py
backend/intent_extractor/tests/: test_regex.py
backend/orchestrator/: Dockerfile  README.md  pyproject.toml  run_service.sh
backend/orchestrator/src/orchestrator/: __init__.py  config.py  main.py
backend/orchestrator/src/orchestrator/api/: __init__.py  router.py
backend/orchestrator/src/orchestrator/models/: __init__.py  schemas.py
backend/orchestrator/src/orchestrator/service/: __init__.py  websocket.py
backend/orchestrator/src/orchestrator/utils/: __init__.py  redis_client.py  security.py
backend/orchestrator/tests/: test_api.py
backend/sentiment_miner/: Dockerfile  README.md  pyproject.toml  run_service.sh
backend/sentiment_miner/src/sentiment_miner/: __init__.py  config.py  main.py  models.py  service.py
backend/sentiment_miner/tests/: test_service.py
backend/speech_to_text/: Dockerfile  README.md  pyproject.toml  run_service.sh
backend/speech_to_text/src/speech_to_text/: __init__.py  config.py  main.py
backend/speech_to_text/src/speech_to_text/models/: __init__.py  messages.py
backend/speech_to_text/src/speech_to_text/service/: __init__.py  http.py  websocket.py
backend/speech_to_text/src/speech_to_text/utils/: publisher.py  vad.py  whisper_engine.py
backend/speech_to_text/tests/: test_api.py
backend/trigger_service/: Dockerfile  README.md  pyproject.toml  run_service.sh
backend/trigger_service/src/trigger_service/: __init__.py  config.py  main.py  models.py  service.py
backend/trigger_service/tests/: test_service.py
data/mappings/: mappings.json
examples/: index.html  run_example.py  stripe_animation.js
frontend/: index.html  package-lock.json  package.json  run_tasks.sh
frontend/src/: App.jsx  index.css  main.jsx  stripeCode.js
frontend/src/components/: StripeGradient.jsx
infra/docker/: docker-compose.yml
scripts/: setup_and_run.py  setup_env.sh
