[tool.poetry]
name = "mockpilot-demographic-classifier"
version = "0.1.0"
description = "Demographic Classifier service for MockPilot, tagging social posts."
authors = ["AI Engineer <ai@example.com>"]
license = "MIT"
readme = "README.md" # Assuming a README will be created for this service
packages = [{include = "demographic_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
redis = {extras = ["hiredis"], version = "^5.0.7"} # If it needs to connect to Redis for any reason (e.g., config, shared data)
openai = "^1.35.0" # For GPT fallback classification
spacy = "^3.7.5"   # For NER and rule-based classification
grpclib = "^0.4.7" # For gRPC server implementation
protobuf = "^4.25.3" # Protocol Buffers, often used with gRPC

# Add any models or shared utilities from the 'shared' backend package if needed
# mockpilot-shared = {path = "../shared", develop = true} # Example

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0" # For testing FastAPI health endpoints if any
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
grpcio-tools = "^1.62.2"  # For compiling .proto files
grpcio-testing = "^1.62.2" # For testing gRPC services
types-redis = "^4.6.0.20240523" # If using redis

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Can be set to false for stricter checks if all stubs are available
# exclude = ['src/demographic_classifier/vendor/'] # Example
