[tool.poetry]
name = "mockpilot-trigger-service"
version = "0.1.0"
description = "Trigger service for MockPilot"
authors = ["AI Engineer <ai@example.com>"]
license = "MIT"
packages = [{include = "trigger_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
redis = {extras = ["hiredis"], version = "^5.0.7"}
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
